--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
       "import": "./dist/index.js"
     }
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "bin": {
     "lockfile-sync-check": "./dist/cli.js"
   },
@@ -23,9 +25,18 @@
     "lint": "biome check src",
     "format": "biome format --write src",
     "release": "pnpm run build && vr release",
-    "prepare": "pnpm build"
+    "prepare": "pnpm build",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
-  "keywords": ["pnpm", "yarn", "npm", "git", "lockfile", "sync"],
+  "keywords": [
+    "pnpm",
+    "yarn",
+    "npm",
+    "git",
+    "lockfile",
+    "sync"
+  ],
   "author": "",
   "license": "MIT",
   "packageManager": "pnpm@10.4.1",
@@ -33,7 +44,9 @@
     "@biomejs/biome": "^1.9.4",
     "@types/node": "^22.13.9",
     "@varlet/release": "^0.3.3",
+    "@vitest/coverage-v8": "^3.0.7",
     "tsup": "^8.4.0",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "vitest": "^3.0.7"
   }
 }
