--- a/.gethub/workflows/lint.yml
+++ b/.gethub/workflows/lint.yml
@@ -10,7 +10,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install pnpm
-        run: corepack enable
+        run: npm i -g --force corepack && corepack enable
 
       - name: Set node version to 18
         uses: actions/setup-node@v3
@@ -23,3 +23,6 @@ jobs:
 
       - name: Lint
         run: pnpm lint
+
+      - name: Test
+        run: pnpm test
