--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lockfile-sync-check",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "A command-line tool to check if your package manager's lockfile is in sync with the latest changes in your Git repository",
   "type": "module",
   "main": "dist/index.js",
@@ -12,7 +12,9 @@
       "import": "./dist/index.js"
     }
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "bin": {
     "lockfile-sync-check": "./dist/cli.js"
   },
@@ -27,7 +29,14 @@
     "test": "vitest",
     "test:coverage": "vitest run --coverage"
   },
-  "keywords": ["pnpm", "yarn", "npm", "git", "lockfile", "sync"],
+  "keywords": [
+    "pnpm",
+    "yarn",
+    "npm",
+    "git",
+    "lockfile",
+    "sync"
+  ],
   "author": "clencat <2091927351@qq.com>",
   "license": "MIT",
   "packageManager": "pnpm@10.4.1",
