chore: update ci dir

--- a/.github/workflows/release-tag.yaml
+++ b/.github/workflows/release-tag.yaml
@@ -20,5 +20,5 @@ jobs:
         with:
           tag_name: ${{ github.ref }}
           body: |
-            更新内容请查看[CHANGELOG](https://github.com/a145789/lockfile-sync-check/blob/main/README.zh-CN.md)。
+            更新内容请查看[CHANGELOG](https://github.com/a145789/lockfile-sync-check/blob/main/CHANGELOG.md)。
             Please refer to [CHANGELOG](https://github.com/a145789/lockfile-sync-check/blob/main/CHANGELOG.md) for details.
