chore: 更新构建配置和依赖项
- 添加tsdown配置文件并替换tsup
- 更新biome配置和VS Code设置
- 升级TypeScript和相关依赖版本
- 添加项目仓库和问题链接

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,9 @@
   },
   "[markdown]": {
     "editor.defaultFormatter": "biomejs.biome"
+  },
+  "editor.codeActionsOnSave": {
+    "source.organizeImports.biome": "explicit",
+    "source.fixAll.biome": "explicit"
   }
 }
