--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "lockfile-sync-check",
   "version": "0.0.6",
   "description": "A command-line tool to check if your package manager's lockfile is in sync with the latest changes in your Git repository",
+  "bugs": "https://github.com/a145789/lockfile-sync-check/issues",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/a145789/lockfile-sync-check"
+  },
   "type": "module",
   "main": "dist/index.js",
   "module": "./dist/index.js",
@@ -20,9 +25,9 @@
   },
   "scripts": {
     "dev": "bun run ./src/cli.ts",
-    "dev:watch": "tsup --watch",
-    "build": "tsup",
-    "lint": "biome check src",
+    "dev:watch": "tsdown --watch",
+    "build": "tsdown",
+    "lint": "biome check src && tsc --noEmit",
     "format": "biome format --write src",
     "release": "pnpm run build && vr release",
     "prepare": "pnpm build",
@@ -41,12 +46,12 @@
   "license": "MIT",
   "packageManager": "pnpm@10.4.1",
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
-    "@types/node": "^22.13.9",
-    "@varlet/release": "^0.3.3",
-    "@vitest/coverage-v8": "^3.0.7",
-    "tsup": "^8.4.0",
-    "typescript": "^5.8.2",
-    "vitest": "^3.0.7"
+    "@biomejs/biome": "^2.1.2",
+    "@types/node": "^24.0.10",
+    "@varlet/release": "^0.4.1",
+    "@vitest/coverage-v8": "^3.2.4",
+    "tsdown": "^0.13.0",
+    "typescript": "^5.8.3",
+    "vitest": "^3.2.4"
   }
 }
