--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,22 @@
     "esModuleInterop": true,
     "downlevelIteration": true,
     "resolveJsonModule": true,
+    "isolatedDeclarations": true,
     "jsx": "preserve",
-    "lib": ["esnext", "dom"],
+    "lib": [
+      "esnext",
+      "dom"
+    ],
     "module": "esnext",
     "moduleResolution": "node",
     "outDir": "./dist"
   },
-  "include": ["src/**/*", "../test"],
-  "exclude": ["node_modules", "dist"]
+  "include": [
+    "src/**/*",
+    "../test"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
