--- a/package.json
+++ b/package.json
@@ -2,56 +2,57 @@
   "name": "lockfile-sync-check",
   "version": "0.0.6",
   "description": "A command-line tool to check if your package manager's lockfile is in sync with the latest changes in your Git repository",
+  "keywords": [
+    "git",
+    "lockfile",
+    "npm",
+    "pnpm",
+    "sync",
+    "yarn"
+  ],
   "bugs": "https://github.com/a145789/lockfile-sync-check/issues",
+  "license": "MIT",
+  "author": "clencat <2091927351@qq.com>",
   "repository": {
     "type": "git",
     "url": "https://github.com/a145789/lockfile-sync-check"
   },
-  "type": "module",
-  "main": "dist/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
-    }
+  "bin": {
+    "lockfile-sync-check": "./dist/cli.js"
   },
   "files": [
     "dist"
   ],
-  "bin": {
-    "lockfile-sync-check": "./dist/cli.js"
+  "type": "module",
+  "main": "dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    }
   },
   "scripts": {
     "dev": "bun run ./src/cli.ts",
     "dev:watch": "tsdown --watch",
     "build": "tsdown",
-    "lint": "biome check src && tsc --noEmit",
-    "format": "biome format --write src",
+    "lint": "oxlint --type-aware --type-check && oxfmt --check",
+    "format": "oxlint --fix && oxfmt",
     "release": "pnpm run build && vr release",
     "prepare": "pnpm build",
     "test": "vitest",
     "test:coverage": "vitest run --coverage"
   },
-  "keywords": [
-    "pnpm",
-    "yarn",
-    "npm",
-    "git",
-    "lockfile",
-    "sync"
-  ],
-  "author": "clencat <2091927351@qq.com>",
-  "license": "MIT",
-  "packageManager": "pnpm@10.4.1",
   "devDependencies": {
-    "@biomejs/biome": "^2.1.2",
-    "@types/node": "^24.0.10",
-    "@varlet/release": "^0.4.1",
-    "@vitest/coverage-v8": "^3.2.4",
-    "tsdown": "^0.13.0",
-    "typescript": "^5.8.3",
-    "vitest": "^3.2.4"
-  }
+    "@types/node": "^24.10.0",
+    "@varlet/release": "^1.0.2",
+    "@vitest/coverage-v8": "^4.0.18",
+    "oxfmt": "^0.28.0",
+    "oxlint": "^1.43.0",
+    "oxlint-tsgolint": "^0.11.4",
+    "tsdown": "^0.20.3",
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.18"
+  },
+  "packageManager": "pnpm@10.28.2"
 }
