chore: 更新发布脚本以使用 bun 运行

--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -25,5 +25,5 @@
     "builtin": true
   },
   "globals": {},
-  "ignorePatterns": ["dist/**", "node_modules/**"]
+  "ignorePatterns": ["dist/**", "node_modules/**", "CHANGELOG.md", "LICENSE"]
 }
