--- a/.oxfmtrc.jsonc
+++ b/.oxfmtrc.jsonc
@@ -1,5 +1,5 @@
 {
   "$schema": "./node_modules/oxfmt/configuration_schema.json",
-  "ignorePatterns": ["dist/**", "node_modules/**"],
+  "ignorePatterns": ["dist/**", "node_modules/**", "CHANGELOG.md", "LICENSE"],
   "semi": false,
 }
