--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "test:coverage": "vitest run --coverage"
   },
   "devDependencies": {
+    "@types/bun": "^1.3.8",
     "@types/node": "^24.10.0",
     "@varlet/release": "^1.0.2",
     "@vitest/coverage-v8": "^4.0.18",
